# resources

./: .gitmodules  CMakeLists.txt  README.md  readme-main.txt  readme-news-latest.txt  readme-news-previous.txt
cmake/: configure.cmake  ff_name_resolv.cmake  ffmpeg_helper.cmake  util.cmake
engine/libs/arm64-osx_64-shared/: libdtypeaux.8.2.1.dylib  libdtypelay.8.2.1.dylib  libdtypepwr.8.2.1.dylib  libdtypestd.8.2.1.dylib  libdtypetxt.8.2.1.dylib  readme.txt
engine/libs/i386-linux_32-shared/: libdtypelay.so.8.2.1  libdtypepwr.so.8.2.1  libdtypestd.so.8.2.1  libdtypetxt.so.8.2.1  readme.txt
engine/libs/i386-osx_32-shared/: libdtypeaux.8.2.1.dylib  libdtypelay.8.2.1.dylib  libdtypepwr.8.2.1.dylib  libdtypestd.8.2.1.dylib  libdtypetxt.8.2.1.dylib  readme.txt
engine/libs/i386-win_32-dll/: dtypeaux.lib  dtypelay.lib  dtypepwr.lib  dtypestd.lib  dtypetxt.lib  readme.txt
engine/libs/x64-linux_64-shared/: libdtypelay.so.8.2.1  libdtypepwr.so.8.2.1  libdtypestd.so.8.2.1  libdtypetxt.so.8.2.1  readme.txt
engine/libs/x64-win_64-dll/: dtypeaux.lib  dtypelay.lib  dtypepwr.lib  dtypestd.lib  dtypetxt.lib  readme.txt
engine/libs/x86_64-osx_64-shared/: libdtypeaux.8.2.1.dylib  libdtypelay.8.2.1.dylib  libdtypepwr.8.2.1.dylib  libdtypestd.8.2.1.dylib  libdtypetxt.8.2.1.dylib  readme.txt
examples-cpp/example_basic_animation/: applet.cpp
examples-cpp/example_basic_output/: applet.cpp
examples-cpp/example_color_rasterizer/: applet.cpp
examples-cpp/example_layout_extension/: applet.cpp
examples-cpp/example_powerdoc_frames/: applet.cpp
examples-cpp/example_powerdoc_output/: applet.cpp
examples-cpp/example_powerdoc_viewer/: applet.cpp
examples-cpp/example_text_animation/: applet.cpp  main.cpp
examples-cpp/example_text_application/: main.cpp
examples-cpp/example_text_application/classes/: keyboard.cpp  panel.cpp  panel_form.cpp  panel_static.cpp  panel_text.cpp  text_doc.cpp  text_doc_demo3.cpp  windowplus.cpp  windowplus_clipboard.cpp  windowplus_info.cpp  windowplus_insert.cpp  windowplus_mainmenu.cpp  windowplus_settings.cpp  windowplus_textdoc.cpp
examples-cpp/example_text_output/: applet.cpp  main.cpp
examples-cpp/example_textpro_builder1/: applet.cpp  main.cpp
examples-cpp/example_textpro_builder2/: applet.cpp  main.cpp
examples-cpp/projects/win-msvc15/: example_basic_output.vcxproj  example_text_animation.vcxproj  example_text_application.vcxproj  example_text_output.vcxproj
examples-cpp/scripts/osx-static-32bit/: 01-make_dtwindow  02-make_example_basic_animation  02-make_example_basic_output  02-make_example_color_rasterizer  02-make_example_font_converter  02-make_example_layout_extension  02-make_example_powerdoc_frames  02-make_example_powerdoc_output  02-make_example_powerdoc_viewer  02-make_example_text_animation  02-make_example_text_application  02-make_example_text_output  02-make_example_textpro_builder1  02-make_example_textpro_builder2
exec/a-rasterizer/: example_color_rasterizer_linux  example_color_rasterizer_osx
exec/b-foundation/: dtype_eval_notice.txt  example_basic_animation_linux  example_basic_animation_osx  example_basic_output_linux  example_basic_output_osx  example_font_converter_linux  example_font_converter_osx  example_layout_extension_linux  example_layout_extension_osx  output.dtf
exec/c-powerdoc/: dtype_eval_notice.txt  example_powerdoc_frames_linux  example_powerdoc_frames_osx  example_powerdoc_output_linux  example_powerdoc_output_osx  example_powerdoc_viewer_linux  example_powerdoc_viewer_osx  frames_debug.txt
exec/d-text/: dtype_eval_notice.txt  example_text_animation_linux  example_text_animation_osx  example_text_application_linux  example_text_application_osx  example_text_output_linux  example_text_output_osx
exec/d-text/config/: dtype.inf  fontmap.inf
exec/e-textpro/: dtype_eval_notice.txt  example_textpro_builder1_linux  example_textpro_builder1_osx  example_textpro_builder2_linux  example_textpro_builder2_osx
exec/e-textpro/config/: dtype.inf
exec/tools/: font_optimizer_linux  font_optimizer_osx  powerdoc_pix2vec_linux  powerdoc_pix2vec_osx
exec/tools/config/: fontmap-stix-1.inf  fontmap.inf
exec/tools/docs/: readme.pdc
include/glad/: glad.h
includes/core/: dtype.h
includes/core-cpp/: dtengine.cpp  dtengine.h
includes/core-cpp/dtbuilder/: dtbuilder.cpp  dtbuilder_ctrl.cpp  dtbuilder_rast.cpp  dtbuilder_text.cpp  dtengine_clips.cpp
includes/core/dtype/: dtypepwr.h  dtypestd-lo.h  dtypetxt-hi.h  dtypetxt-lo.h
includes/extras/: pdextras.cpp
manuals/CDTDisplay/manual/: intro.htm
manuals/CDTDocV8/funcs/: GetEngine.htm  GetPDDoc.htm  GetTXDoc.htm  PropGet.htm  index.htm
manuals/CDTEngineV8/funcs/: FontAddAsMMInstance.htm  FontAddViaStream.htm  FontFindMMInstance.htm  FontGetDim.htm  FontGetMMAxisInfo.htm  FontGetNumericValue.htm  FontGetStringValue.htm  FontGetSysStatus.htm  FontMakeInactive.htm  FontSetErrorCallback.htm  GetDTEngine.htm  GetPDEngine.htm  Init.htm  index.htm
manuals/CDTRasterizerV8/funcs/: BSplineTo.htm  BezierTo.htm  LineTo.htm  MoveTo.htm
manuals/CDTText/funcs/: AddFlow.htm  CDTText.htm  Command.htm  Copy.htm  Draw.htm  GetHighlighter.htm  GetNumericValuePD.htm  GetNumericValueTX.htm  GetPDDoc.htm  GetSelect.htm  GetSelectSize.htm  GetTXDoc.htm  Hit.htm  Info.htm  MakeFontmap.htm  PasteViaDoc.htm  PasteViaPowerObj.htm  PasteViaStream.htm  Refresh.htm  Save.htm  SetAttribs.htm  SetFlow.htm  SetHighlighter.htm  SetNumericValuePD.htm  SetNumericValueTX.htm  SetScriptCallback.htm  SetSelect.htm  index.htm  ~CDTText.htm
manuals/CDTTextEmbeddable/funcs/: CDTTextEmbeddable.htm  Make.htm  index.htm  ~CDTTextEmbeddable.htm
manuals/CDTTextStandalone/funcs/: CDTTextStandalone.htm  Make.htm  index.htm  ~CDTTextStandalone.htm
manuals/CDTWindow/funcs/: Event_CharDown.htm  Event_CharUp.htm
manuals/common/faq/: charenc.htm  fonts.htm  general.htm  (+1 more)
scripts/: configure.bash
src/: glad.c
tools/: msvc.bat
tools/cmake/: avtarget.cmake  configure.cmake  install.cmake  msvc_util.cmake  util.cmake
tools/scripts/: file_coding_convert.bash  hints.sh  wsl_init_configure.ps1
(+137 files in other folders)
